Removed TMP Boiler

--- a/index.html
+++ b/index.html
@@ -165,11 +165,11 @@
 		<li>Management: <a href="mailto:amanda.beach@tmp.com">Amanda Beach</a></li>
 	</ul>
 
-	<hr/>
+	<!-- hr/>
 
 	<img src="https://tbcdn.talentbrew.com/company/3401/v1_0/img/global/tmp-logo-drk.svg" alt="TMP Worldwide">
 
-	<p>&copy; 2017 TMP Worldwide. An equal opportunity employer.</p>
+	<p>&copy; 2017 TMP Worldwide. An equal opportunity employer.</p -->
 
 </body>
 </html>
